Fixed overflow

--- a/kJumbotronManager/less/jumboManager.less
+++ b/kJumbotronManager/less/jumboManager.less
@@ -71,7 +71,7 @@
 
 #jumbomanager-controls {
 	.control-group {
-		padding: 0 1rem;
+		padding: 0 3rem;
 	}
 	.slider-container {
 		// width: 95%;
